@@ -260,6 +260,7 @@ upgrade.caption.detected=En opgradering til JAMWiki er blevet installeret. Tag e
 upgrade.caption.upgradecomplete=Opgradering f\u00E6rdiggjort. Se nedenfor for evt. fejlmeddelelser.<br />{0}
 upgrade.caption.upgradefailed=The upgrade has failed.  Please see below and check the logs for any failure messages, and consult the UPGRADE.txt document for details on how to perform a manual upgrade.  Please report this error at <a href="http://jamwiki.org/"> jamwiki.org</a> and provide any relevant information in the bug report.
 upgrade.error.notrequired=Opgradering er ikke p\u00E5kr\u00E6vet.
+upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=Opgrader
 upload.error.directorycreate=Kan ikke oprette upload folder {0}.
 upload.error.filename=Ugyldigt filnavn.
